[package]
name = "bookmark-cd"
version = "1.0.22"
edition = "2021"
rust-version = "1.84.1"
authors = ["Alec Brown <alec@noser.net>"]
description = "Bookmark directories and move to them"
license = "Apache-2.0"
repository = "https://github.com/a1ecbr0wn/bcd"
homepage = "https://bcd.a1ecbr0wn.com"
readme = "README.md"
keywords = ["filesystem", "utility"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "bookmark-cd"

[dependencies]
clap = { version = "=4.5.42", features = ["derive"] }
clap_complete = "=4.5.52"
csv = "=1.3.1"
home = "0.5.11"
tabled = "0.19.0"
pshell = "1.0.14"
snapcraft = "0.4.0"

[build-dependencies]
clap = { version = "=4.5.42", features = ["derive"] }
clap_complete = "=4.5.52"
clap_complete_fig = "4.5"
home = "0.5.9"
pshell = "1.0.12"
snapcraft = "0.4.0"
