[package]
name = "bookmark-cd"
version = "1.0.29"
edition = "2024"
rust-version = "1.85"
authors = ["Alec Brown <alec@noser.net>"]
description = "Bookmark directories and move to them"
license = "Apache-2.0"
repository = "https://github.com/a1ecbr0wn/bcd"
homepage = "https://bcd.a1ecbr0wn.com"
readme = "README.md"
keywords = ["filesystem", "utility"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "bookmark-cd"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
csv = "=1.4.0"
home = "0.5.12"
tabled = "0.20.0"
pshell = "1.0.17"
snapcraft = "0.4.3"

[build-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
clap_complete_fig = "4.5"
home = "0.5.12"
pshell = "1.0.17"
snapcraft = "0.4.3"
